# blog-ai

./: crew.py  main.py  pyproject.toml  requirements.txt
src/blog_generator/config/: settings.yaml
